# simple_dto_mapper_derive

./: Cargo.toml  LICENSE  README.md  deny.toml
examples/: basic_mapping.rs  collection_mapping.rs
src/: lib.rs
tests/: collection_length_invariant.rs  compile_fail_diagnostics.rs  derive_tests.rs  property_invariants.rs
tests/ui/: conflict_skip.rs  conflict_skip.stderr  conflict_transform_into.rs  conflict_transform_into.stderr  duplicate_from.rs  duplicate_from.stderr  duplicate_rename.rs  duplicate_rename.stderr  missing_from.rs  missing_from.stderr  tuple_struct.rs  tuple_struct.stderr  unknown_key.rs  unknown_key.stderr  unknown_struct_key.rs  unknown_struct_key.stderr
